# HW_WEB_modul_2

./: Dockerfile  main.py  pyproject.toml
